feat: update libjogl2-java to 2.5.0+dfsg-3.1
Signed-off-by: lhdjply <lhdjply@126.com>